harry potter app project

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/mini.css/dist/mini-dark.min.css";
+
+/* To change the background and font application's color */
+body{
+    background-color: #ECEFF4;
+    color: black;
+}
